--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Stylesheet */
 body {
-    background: black;    
+    background: url("../img/bg.png");    
 }
 
 p, h3 {
@@ -32,5 +32,9 @@ section {
 }
 
 .container_12 {
-        background: #FFF;
+        
+}
+
+.showgrid {
+        background: url("../img/12-col-grid.gif") !important;
 }
